--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Brygada+1918:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Mystery+Quest&display=swap');
 
+@media screen and (max-width: 768px) {
+    .card {
+        width: 75% !important;
+    }
+}
+
 :root {
     --Eerie-black: #212529;
     --Onyx: #343A40;
@@ -12,3 +18,29 @@
     --Seasalt: #F8F9FA;
 }
 
+.card {
+    width: 50%;
+    color: var(--French-gray2) !important;
+    background-color: #495057c0 !important;
+}
+
+.btn-primary {
+    color: var(--Eerie-black) !important;
+    background-color: var(--Platinum) !important;
+    border: none !important;
+}
+
+.btn-primary:hover {
+    color: var(--Platinum) !important;
+    background-color: var(--Eerie-black) !important;
+}
+
+#root {
+    background-color: var(--Outer-space);
+}
+
+#imgIntro {
+    height: 35rem;
+    background-image: url(../imgs/home/img1.png);
+    background-position: center;
+}
