--- a/styles/polos.css
+++ b/styles/polos.css
@@ -82,3 +82,8 @@ footer a {
 #pagamento a:hover {
     border: 1px solid var(--French-gray2);
 }
+
+table tr td, table tr th, table {
+    border-color: transparent !important;
+    background-color: transparent !important;
+}
