--- a/styles/home.css
+++ b/styles/home.css
@@ -50,3 +50,9 @@
     background-image: url(../imgs/home/img2.png);
     background-position: 0;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
